apps/kubernetes-dashboard/base/gateway.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - name: kubernetes-dashboard
    hostname: k8s.seigra.net
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - name: kubernetes-dashboard-gateway-tls
      mode: Terminate
